--- a/middleware/public/index.html
+++ b/middleware/public/index.html
@@ -29,7 +29,7 @@
 
 
   <!-- Dependencies -->
-  <script src="node_modules/socket.io-client/socket.io.js"></script>
+  <script src="node_modules/socket.io-client/dist/socket.io.min.js"></script>
   <script src="node_modules/angular/angular.min.js"></script>
   <script src="node_modules/jquery/dist/jquery.min.js"></script>
   <script src="node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
@@ -74,6 +74,6 @@
   <script src="app/directives/alertcenter.js"></script>
   <script src="app/services/alertcenterfactory.js"></script>
 
-  <script src="app/app.js"></script> 
+  <script src="app/app.js"></script>
   </body>
 </html>
